# ComfyUI-ShadowR

./: LICENSE  README.md  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
shadow_r/: model.py  models.py  myFFCResblock0.py
shadow_r/Restormer/: restormer_arch.py
shadow_r/saicinpainting/training/modules/: __init__.py  base.py  ffc.py  ffc0.py  multidilated_conv.py  multiscale.py  pix2pixhd.py
shadow_r/weights/: put weights here.txt
workflow/: worfklow.json
